--- a/src/app/mitav/mitav-delirium/mitav-delirium-for-department/mitav-delirium-for-department.component.html
+++ b/src/app/mitav/mitav-delirium/mitav-delirium-for-department/mitav-delirium-for-department.component.html
@@ -100,6 +100,13 @@
           <span>{{ element.AdmissionNo || 'לא זמין' }}</span>
         </mat-cell>
       </ng-container>
+      <ng-container matColumnDef="Pname">
+        <mat-header-cell *matHeaderCellDef mat-sort-header> שם מטופל</mat-header-cell>
+        <mat-cell *matCellDef="let element">
+          <span>{{ element.Pname || 'לא זמין' }}</span>
+        </mat-cell>
+      </ng-container>
+    
     
       <!-- גיל - AgeYears -->
       <ng-container matColumnDef="AgeYears">
@@ -118,12 +125,12 @@
       </ng-container>
     
       <!-- סה"כ ימי אשפוז - TotalHospDays -->
-      <ng-container matColumnDef="TotalHospDays">
+      <!-- <ng-container matColumnDef="TotalHospDays">
         <mat-header-cell *matHeaderCellDef mat-sort-header>סה"כ ימי אשפוז</mat-header-cell>
         <mat-cell *matCellDef="let element">
           <span>{{ element.TotalHospDays || 0 }}</span>
         </mat-cell>
-      </ng-container>
+      </ng-container> -->
     
    <!-- ציון אומדן - Grade -->
    <ng-container matColumnDef="Grade">
