--- a/src/app/ServiceCRM/main-screen/main-screen.component.scss
+++ b/src/app/ServiceCRM/main-screen/main-screen.component.scss
@@ -1,14 +1,12 @@
 .crm-container {
-    position: relative;
-    height: 100vh;
-    width: 100%;
-    background-image: url('/assets/מרכז רפואי צפון רקע.jpg'); // replace with your actual file
-    background-size: cover;
-    background-position: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  
+     position: relative;
+  height: 100vh;
+  width: 100%;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
     .overlay {
       position: absolute;
       background-color: rgba(255, 255, 255, 0.7); // soft overlay
@@ -80,7 +78,7 @@
   }
   
   .birthday-button {
-    background-image: url('/assets/birthday.jpg');
+   // background-image: url('/assets/birthday.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -102,5 +100,25 @@
       padding: 0.5rem 1rem;
       border-radius: 1rem;
     }
+  }
+  .user-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 20px;
+  }
+  
+  .profile-pic {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 3px solid #2196f3;
+    margin-bottom: 10px;
+  }
+  
+  .welcome-text {
+    font-size: 1.4rem;
+    color: #ffffff;
   }
   
