--- a/src/app/ServiceCRM/main-screen/main-screen.component.scss
+++ b/src/app/ServiceCRM/main-screen/main-screen.component.scss
@@ -106,6 +106,7 @@
     flex-direction: column;
     align-items: center;
     margin-bottom: 20px;
+   
   }
   
   .profile-pic {
@@ -119,6 +120,6 @@
   
   .welcome-text {
     font-size: 1.4rem;
-    color: #ffffff;
+    color: #ee0a0a;
   }
   
