--- a/src/app/ServiceCRM/main-screen/main-screen.component.html
+++ b/src/app/ServiceCRM/main-screen/main-screen.component.html
@@ -23,9 +23,9 @@
     <!-- 🧩 Button Grid -->
     <div class="button-grid">
       <button mat-raised-button color="primary" class="crm-button" routerLink="/UserCRM">מאושפזים</button>
-      <button mat-raised-button color="accent" class="crm-button" routerLink="/calls">שיחות מנהל</button>
+      <!-- <button mat-raised-button color="accent" class="crm-button" routerLink="/calls">שיחות מנהל</button>
       <button mat-raised-button color="warn" class="crm-button" routerLink="/surveys">סקרי שביעות רצון</button>
-      <button mat-raised-button class="crm-button custom-green" routerLink="/feedback">משובים בזמן אמת</button>
+      <button mat-raised-button class="crm-button custom-green" routerLink="/feedback">משובים בזמן אמת</button> -->
       <button
       mat-raised-button
       class="birthday-button"
