--- a/src/app/ServiceCRM/phone-call-dialog/phone-call-dialog.component.html
+++ b/src/app/ServiceCRM/phone-call-dialog/phone-call-dialog.component.html
@@ -2,7 +2,7 @@
   
     <!-- Avatar Image -->
     <div class="avatar-container">
-      <img src="assets/headphone.webp" alt="Customer Support" class="avatar-image">
+      <img src="aprofilePictureUrl" alt="Customer Support" class="avatar-image">
     </div>
   
     <!-- Patient Details Card -->
@@ -10,7 +10,6 @@
       <mat-card-content>
         <!-- Patient Name Centered -->
         <div class="patient-header">
-          <img [src]="profilePictureUrl" class="profile-pic" />
           <h2>
             <mat-icon class="user-icon">person</mat-icon>
             <span class="name">{{ data.FirstName }} {{ data.LastName }}</span>
