--- a/src/app/ServiceCRM/phone-call-dialog/phone-call-dialog.component.html
+++ b/src/app/ServiceCRM/phone-call-dialog/phone-call-dialog.component.html
@@ -2,7 +2,7 @@
   
     <!-- Avatar Image -->
     <div class="avatar-container">
-      <img src="aprofilePictureUrl" alt="Customer Support" class="avatar-image">
+      <img [src]="profilePictureUrl" alt="Customer Support" class="avatar-image">
     </div>
   
     <!-- Patient Details Card -->
