--- a/src/app/ServiceCRM/phone-call-dialog/phone-call-dialog.component.html
+++ b/src/app/ServiceCRM/phone-call-dialog/phone-call-dialog.component.html
@@ -1,3 +1,4 @@
+<div cdkDrag cdkDragRootElement=".cdk-overlay-pane">
 <mat-dialog-content class="dialog-container" dir="rtl">
   
     <!-- Avatar Image -->
@@ -97,4 +98,4 @@
     <button mat-button (click)="close()">ביטול</button>
     <button mat-flat-button color="primary" (click)="save()">שמור</button>
   </mat-dialog-actions>
-  
+</div>
