--- a/src/app/ServiceCRM/questionnaire-remarks-phone-call-dialog/questionnaire-remarks-phone-call-dialog.component.html
+++ b/src/app/ServiceCRM/questionnaire-remarks-phone-call-dialog/questionnaire-remarks-phone-call-dialog.component.html
@@ -1,3 +1,5 @@
+<div cdkDrag cdkDragRootElement=".cdk-overlay-pane">
+
 <mat-dialog-content class="dialog-container" dir="rtl">
 
     <div class="avatar-container">
@@ -69,4 +71,4 @@
     <button mat-button (click)="close()">ביטול</button>
     <button mat-flat-button color="primary" (click)="save()">שמור</button>
   </mat-dialog-actions>
-  
+</div>
