--- a/src/app/mitav/mitav-mobility/mitav-mobility.component.html
+++ b/src/app/mitav/mitav-mobility/mitav-mobility.component.html
@@ -104,8 +104,8 @@
 <div class="gauge-item">
   <div class="gauge-title">הליכה בפועל </div>
   <ngx-gauge
-  [value]="(validMobilityCasesAboveThreshold / totalMobilityCases) * 100"
-    [min]="0"
+  [value]="roundPercent((validMobilityCasesAboveThreshold / totalMobilityCases) * 100)"
+  [min]="0"
     [max]="100"
     [label]="''"
     [append]="'%'"
